# dock-confidence

./: .gitignore  LICENSE  README.md  RESEARCH.md  pyproject.toml
.github/workflows/: ci.yml
dockconf/: __init__.py  calibrate.py  cli.py  metrics.py  parse.py  report.py  rmsd.py
dockconf/data/: fixture.py
spec/: mission.md  plan.md  roadmap.md  spec.md  tasks.md  tech-stack.md
tests/: test_dockconf.py
tests/data/: _make_samples.py  edge_fixtures.py  sample.sdf  sample_native.sdf
