[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dock-confidence"
version = "0.1.0"
description = "Calibrated confidence for protein-ligand docking poses (layer of verification over any docking engine)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Pedro Sordo Martínez", email = "amurlaniakea@gmail.com" }]
keywords = ["docking", "drug-discovery", "calibration", "ECE", "bioinformatics", "cheminformatics"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "rdkit>=2024.3",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
dock-confidence = "dockconf.cli:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["dockconf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
